added multiple topics on subscription

--- a/webio.html
+++ b/webio.html
@@ -35,6 +35,16 @@
             <td class="unknown" id="hab1"></td>
             <td id="switch"><button> Switch </button></td>
         </tr>
+        <tr>
+            <td >[Hab2]</td>
+            <td class="unknown" id="hab2"></td>
+            <td id="switch"><button> Switch </button></td>
+        </tr>
+        <tr>
+            <td >[A/C]</td>
+            <td class="unknown" id="ac"></td>
+            <td id="switch"><button> Switch </button></td>
+        </tr>
         </table>
     </body>
 </html>
