changed to multiple topics

--- a/webio.html
+++ b/webio.html
@@ -32,18 +32,18 @@
         </tr>
         <tr>
             <td >[Hab1]</td>
-            <td class="unknown" id="hab1"></td>
-            <td id="switch"><button> Switch </button></td>
+            <td class="off" id="hab1/luz"></td>
+            <td id="switch/hab1/luz"><button> Switch </button></td>
         </tr>
         <tr>
             <td >[Hab2]</td>
-            <td class="unknown" id="hab2"></td>
-            <td id="switch"><button> Switch </button></td>
+            <td class="off" id="hab2/luz"></td>
+            <td id="switch/hab2/luz"><button> Switch </button></td>
         </tr>
         <tr>
             <td >[A/C]</td>
-            <td class="unknown" id="ac"></td>
-            <td id="switch"><button> Switch </button></td>
+            <td class="off" id="sala/ac"></td>
+            <td id="switch/sala/ac"><button> Switch </button></td>
         </tr>
         </table>
     </body>
